dev/soludev/soludev-landing/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: soludev-landing
  namespace: soludev
  labels:
    app: soludev-landing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: soludev-landing
  template:
    metadata:
      labels:
        app: soludev-landing
        app.kubernetes.io/part-of: soludev-workload
    spec:
      tolerations:
        - key: "klipperlb-exclude"
          value: "true"
          effect: "NoSchedule"
          operator: "Equal"
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app.kubernetes.io/part-of: soludev-workload
      containers:
        - name: soludev-landing
          image: kaiohz/soludev-landing:latest
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "96Mi"
