dev/soludev/soludev-landing/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: soludev-landing-ingress
  namespace: soludev
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/redirect-scheme: https
spec:
  rules:
    - host: soludev.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: soludev-landing
                port:
                  number: 5173
